prevent long links breaking out of container

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -17,7 +17,7 @@
   text-align: left;
   max-width: 640px;
   margin: 0 auto;
-  overflow: scroll;
+  word-wrap: break-word;
 }
 
 .blog--post--article img {
@@ -42,10 +42,8 @@
 
 .blog--post--metadata {
   text-align: left;
-  /*padding: 2em 0;*/
   font-size: 0.6em;
   color: #888;
-  /*font-family: futura, sans-serif;*/
   text-transform: uppercase;
 }
 
